ajout de Quiz Gym

--- a/index.html
+++ b/index.html
@@ -735,10 +735,10 @@
                           </div>
                         </div>
                         <div class="mycell">
-                          <div class="mytitle"><a href="#" target="_blank">&nbsp;</a></div>
+                          <div class="mytitle"><a href="https://www.oubingo.com/gymquiz/" target="_blank">Gym Quiz</a></div>
                           <div class="mycontent">
-                            <div class="myimage"><!--<a href="" target="_blank"><img src="img/doctools.png" class="plain"></a>--></div>
-                            <div class="mydesc"></div>
+                            <div class="myimage"><a href="https://www.oubingo.com/gymquiz/" target="_blank"><img src="img/gymquiz.png" class="plain"></a></div>
+                            <div class="mydesc">Questions Flash sous forme de diaporamas. Possibilité de créer ses propres questionnaires.</div>
                           </div>
                         </div>    
                       </div>    
