ajout automatismes CM1 et CM

--- a/index.html
+++ b/index.html
@@ -462,8 +462,7 @@
                 <h2>Définir une liste d'automatismes au Cycle 3</h2>
                 
                 <p>En vous limitant à une douzaine d'items, dégager une liste d'automatismes qui vous semblent prioritaires à travailler en CM1 et en CM2.
-                    <p>    
-                    
+                </p>                        
                 <div class="columns" >
                         <div class="col-2">
                             <a href="https://docs.google.com/document/d/1j8YusUw1xU5O5kupW64f3U1deVsqtUwWXq9hPNTcYCM/edit?usp=sharingg" target="_blank"><img src="img/liste_auto_6E.png" class="plain"></a>
@@ -471,7 +470,29 @@
                         <div class="col-10" style="padding-left:2em;">                                        
                                 <a href="https://docs.google.com/document/d/1j8YusUw1xU5O5kupW64f3U1deVsqtUwWXq9hPNTcYCM/edit?usp=sharing" target="_blank">Automatismes retenus en 6<sup>ème</sup></a> (Google Docs)
                         </div>                    
-                </div>                      
+                </div>  
+                <div class="fragment fade-up" style="border:1px solid  #008748;border-radius:5px;padding:0.5em;margin-top:0.5em;background-color: #ffffff3d;">
+                    <div style="font-size:75%;margin-bottom:0.5em;">Suite au travail effectué lors de la journée d'animation :
+                    </div>
+                    <div style="display:flex;">
+                        <div style="display:flex;flex-direction:column;text-align:center;">
+                            <div>
+                                <a href="https://docs.google.com/document/d/1PEBdBk4lOnahyy4nQ34dBlEvEFs8yV9qDbXKBYWkF8k/edit?usp=sharing" target="_blank"><img src="img/liste_auto_cm1.png" class="plain" style="width:25%;"></a>
+                            </div>
+                            <div>
+                                <a href="https://docs.google.com/document/d/1PEBdBk4lOnahyy4nQ34dBlEvEFs8yV9qDbXKBYWkF8k/edit?usp=sharing" target="_blank">Automatismes retenus en CM1</a> (Google Docs)
+                            </div>
+                        </div>
+                        <div style="display:flex;flex-direction:column;text-align:center;">
+                            <div>
+                                <a href="https://docs.google.com/document/d/1Eaj1WZTCrZOm4cfICjt4I3nmfbNbgHZfRPWPLXny47Q/edit?usp=sharing" target="_blank"><img src="img/liste_auto_cm2.png" class="plain" style="width:25%;"></a>
+                            </div>
+                            <div>
+                                <a href="https://docs.google.com/document/d/1Eaj1WZTCrZOm4cfICjt4I3nmfbNbgHZfRPWPLXny47Q/edit?usp=sharing" target="_blank">Automatismes retenus en CM2</a> (Google Docs)
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
 
