--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
                    <div class="columns fragment" >
                         <div class="col-2">
-                            <a href="https://docs.google.com/document/d/1sRoX-Tk8BSj0n_Q0BLoTYpV-5Xcy2S4BXqNm3RqLf6Q/edit?usp=sharing" target="_blank"><img src="img/listeautoc3.png" class="plain"></a>
+                            <a href="https://docs.google.com/document/d/1sRoX-Tk8BSj0n_Q0BLoTYpV-5Xcy2S4BXqNm3RqLf6Q/edit?usp=sharing" target="_blank"><img src="img/listeautoC3.png" class="plain"></a>
                         </div>                   
                         <div class="col-10" style="padding-left:2em;">                                        
                                 <a href="https://docs.google.com/document/d/1sRoX-Tk8BSj0n_Q0BLoTYpV-5Xcy2S4BXqNm3RqLf6Q/edit?usp=sharing" target="_blank">Liste des automatismes repérés</a> (Google Docs)
